--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -5,3 +5,100 @@ dark-blue: #0a2c42;
 grey: #bfbfbf;
 font-family: Arial, Helvetica, sans-serif;
 */
+
+
+body {
+font-family: Arial, Helvetica, sans-serif;
+
+}
+
+nav {
+    width: 100%;
+    height: 3vh;
+    background-color: #2081c3;
+    padding: 2vh 0 1.3vh 4vw;
+    position:fixed;
+    margin: 0;
+    top: 0;
+    left:0;
+}
+
+nav a {
+    text-decoration: none;
+    color:#f7f9f9;
+    padding-left: 2vw;
+    font-weight: bold;
+}
+
+footer {
+    width: 100%;
+    height: 3vh;
+    position:fixed;
+    background-color: #0a2c42;
+    bottom:0;
+    left: 0;
+    padding-bottom: 2vh;
+    padding-left: 2vw;
+}
+
+footer p {
+    color:#f7f9f9;
+    font-weight: bold;
+}
+
+img {
+    height: 25vh;
+    width:auto;
+}
+
+#beer-card {
+    display: flex;
+    width: 23vw;
+    padding: 2vh 2vw;
+}
+
+.mosaic {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 7vh;
+    justify-content: space-around;
+}
+
+#random-beer-div {
+    margin-top: 7vh;
+    margin-left: 7vw;
+    display: flex;
+}
+
+#index-div {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20vh;
+    align-items: center;
+}
+
+#index-div img{
+    width: 20vw;
+    height: auto;
+}
+
+button {
+    background-color: #2081c3;
+    height: 5vh;
+    border: #2081c3 solid 0;
+border-radius: 5%;
+}
+
+button a {
+    text-decoration: none;
+    color: #f7f9f9;
+    font-weight: bold;
+}
+
+#buttons-div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 5vh;
+    height: 15vh;
+}
