--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,8 @@
-<div>
+<div id="index-div">
+    <img src="/images/beer.png" alt="Jar of beer">
+    <div id="buttons-div">
 
+    <button><a href="/beers">Check the Beers!</a></button>
+    <button><a href="/random-beer">Check a Random Beer</a></button>
+    </div>
 </div>
